--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,36 +16,57 @@ body {
     background-color: #cccccc;
 }
 
+.headerContent {
+	width: 960px;
+	/*width: 640px;*/
+    margin-left: auto;
+    margin-right: auto;
+}
+
 header {
 	background-color: #ffffff;
+	/*height: 50px;*/
 	/*border-color: #cccccc;*/
-	padding-top: 2%;
-	padding-bottom: 2%;
-	position: relative;
+	/*padding-top: 2%;*/
+	/*padding-bottom: 2%;*/
 }
+
 
 header h1 {
 	background-color: #4aaaa5;
 	color: #ffffff;
 	display: inline-block;
-	/*padding: 10px;*/
-	height: 100%;
-	font-size: 20px;
+	padding: 2%;
+	height: 50px;
+	font-size: 30px;
 	font-weight: bold;
+	/*height: auto;*/
+	/*border: 1px solid blue;*/
+    box-sizing: border-box;
+}
+
+header h2 {
+	padding: 2%;
 }
 
 nav {
 	display: inline-block;
+	float: right;
+	font-size: 20px;
+	padding: 2% 0% 2% 2%;
 }
 
 section {
 	background-color: #ffffff;
-	/*border-color: #dddddd;*/
-	margin-top: 5%;
-	margin-bottom: 5%;
+	border-color: #dddddd;
+	margin-top: 3%;
+	margin-bottom: 3%;
     width: 960px;
+    /*width: 640px;*/
+    /*height: 450px;*/
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 3%;
 }
 
 section header h2 {
@@ -60,14 +81,108 @@ section hr {
 	margin-right: 2%;
 }
 
+#aboutMeInfo {
+	margin-right: 2%;
+}
+
+#profilePic {
+	margin-left: 2%;
+	margin-right: 2%;
+	float: left;
+}
+
+p span {
+	/*padding-left: 2%;*/
+	/*border-color: #4aaaa5;
+	border-style: solid;
+	border-width: 2px;*/
+}
+
 footer {
-	text-align: center;
+	/*text-align: center;
 	background-color: #666666;
 	color: #ffffff;
 	padding-top: 2%;
-	padding-bottom: 2%;
+	padding-bottom: 2%;*/
 	/*margin-bottom: 0;*/
-	border-top: 5px;
+	/*border-top: 5px;
+	border-color: #4aaaa5;
+	border-style: solid;*/
+
+	position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #666666;
+	color: #ffffff;
+    text-align: center;
+    border-top: 5px;
 	border-color: #4aaaa5;
 	border-style: solid;
+	padding-top: 2%;
+	padding-bottom: 2%
+}
+
+#contactForm {
+	width: 320px;
+	margin-left: auto;
+	margin-right: auto;
+	/*position: relative;
+	 top: 25%;
+	 left: 50%;
+	 transform: translate(-50%, -25%);*/
+}
+
+#name, #email, #message {
+	width: 100%;
+	margin-top: 1%;
+	margin-bottom: 3%;
+	border-width: 1px;
+	border-color: #000000;
+	border-style: solid;
+}
+
+#formSubmit {
+	display: inline-block;
+	background-color: #4aaaa5;
+	padding: 2%;
+}
+
+table {
+	width: 100%;
+	/*margin: 0 auto;*/
+/*	border-width: 1px;
+	border-color: #000000;
+	border-style: solid;*/
+	text-align: center;
+}
+
+td {
+	/*width: 33%;*/
+	/*border-width: 1px;
+	border-color: #000000;
+	border-style: solid;*/
+	padding: 1%;
+	position: relative;
+}
+
+td img {
+	width: 160px;
+	height: auto;
+}
+
+.workTitle {
+	/*float: left;*/
+	/*z-index: 2;*/
+	position: absolute;
+	bottom: 5%;
+	left: 160px;
+width: 160px;
+	/*display: block;*/
+	/*border-width: 1px;
+	border-color: #000000;
+	border-style: solid;*/
+	padding 5%;
+	color: #ffffff;
+	background-color: #4aaaa5;
 }
