--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ nav {
 	display: inline-block;
 	float: right;
 	font-size: 20px;
-	padding: 2% 0% 2% 2%;
+	padding: 2% 0% 2% 2%;`
 }
 
 section {
@@ -169,20 +169,25 @@ td {
 td img {
 	width: 160px;
 	height: auto;
+/*	border-width: 1px;
+	border-color: blue;
+	border-style: solid;*/
 }
 
 .workTitle {
 	/*float: left;*/
 	/*z-index: 2;*/
 	position: absolute;
-	bottom: 5%;
+	bottom: 15%;
 	left: 160px;
 width: 160px;
 	/*display: block;*/
 	/*border-width: 1px;
 	border-color: #000000;
 	border-style: solid;*/
-	padding 5%;
+	/*padding: 1%;*/
+	padding-top: 1%;
+	padding-bottom: 1%;
 	color: #ffffff;
 	background-color: #4aaaa5;
 }
