--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,8 +55,8 @@ nav a:hover {
 section {
 	background-color: #ffffff;
 	border-color: #dddddd;
-	margin-top: 3%;
-	margin-bottom: 3%;
+	margin-top: 65px;
+	margin-bottom: 140px;
     width: 960px;
     margin-left: auto;
     margin-right: auto;
